crates/goguard-nil/src/snapshots/goguard_nil__fixture_tests__nil_map.snap
---
source: crates/goguard-nil/src/lib.rs
expression: "&diags"
---
- id: "NIL004-[FIXTURE_DIR]/nil_map.go:10"
  rule: NIL004
  severity: warning
  confidence: 0.95
  title: nil map access
  explanation: "In function `NilMapAccess`, map is nil when accessed"
  location:
    file: "[FIXTURE_DIR]/nil_map.go"
    line: 10
    column: 10
    end_line: 10
    end_column: 10
  root_cause: ~
  fix: ~
  related: []
  blast_radius: ~
  pattern: ~
  source: nil
- id: "NIL004-[FIXTURE_DIR]/nil_map.go:17"
  rule: NIL004
  severity: critical
  confidence: 0.95
  title: nil map write — runtime panic
  explanation: "In function `NilMapWrite`, map is nil when accessed"
  location:
    file: "[FIXTURE_DIR]/nil_map.go"
    line: 17
    column: 3
    end_line: 17
    end_column: 3
  root_cause: ~
  fix: ~
  related: []
  blast_radius: ~
  pattern: ~
  source: nil
